ITO0016-148 Fix Banner and Message overlap issue

--- a/app/design/frontend/AmorePacific/laneige/web/css/source/_breadcrumbs.less
+++ b/app/design/frontend/AmorePacific/laneige/web/css/source/_breadcrumbs.less
@@ -33,6 +33,14 @@
             .category-description {
                 margin-top: -74px;
             }
+
+            .category-margin {
+                margin-top: -8px;
+            }
+        }
+
+        &.reduce-margin-bottom {
+            margin-bottom: 20px;
         }
     }
 }
